# N2HE

./: CMakeLists.txt  FacialRecognition.cpp  LICENSE  LUT_test.cpp  MNIST.cpp  ObjectClassification.cpp  README.md  SpeechRecognition.cpp  TextClassification.cpp  test.cpp
FacicalRecognition_data/: cnn30.txt  testImgAll.txt
MNIST_data/: bp.txt
ObjectClassification_data/: 9898.txt
SpeechRecognition_data/: speech-30.txt  speech-all.txt
TextClassification_data/: cnn-text.txt  test.txt
include/: include.hpp
include/LWEscheme/: LWE_32.hpp  LWE_64.hpp
include/PolynomialRing/: Poly_ring_64.hpp
include/RLWEscheme/: LUT_64.hpp  RLWE_64.hpp
include/RandomNumberGenerator/: lac_param.h  rand.hpp  rng.hpp
include/test/: testLWE.hpp  testPoly.hpp  testRLWE.hpp  testRNG.hpp
